--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,7 +20,9 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.13' 
+          python-version: '3.13'
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Run script
         run: python script.py
       - name: Upload artifact
