--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,14 +21,13 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.13'
-      - name: Try cache
+      - name: Restore cache
         id: cache
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      - name: Install dependencies on cache-miss
-        if: steps.cache.outputs.cache-hit != 'true'
+      - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run script
         run: python script.py
