Refactor build process: replace script.py with build.py and update deployment steps in pages.yml

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,11 +30,7 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run script
-        run: python script.py
-      - name: Move static file to site directory
-        run: |
-          mkdir _site/
-          mv index.html _site/index.html
+        run: python build.py
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
